# ciallo-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apps/api/: Dockerfile  requirements.txt
apps/api/app/: agent_runtime.py  config.py  file_parser.py  main.py  model_gateway.py  schemas.py  session_store.py  web_search.py
apps/api/tests/: conftest.py  test_api_chat.py  test_api_config.py  test_file_parser.py  test_session_store.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/backend/[...path]/: route.ts
docs/: requirements.md  technical-selection.md
scripts/: cleanup.sh  restart_services.sh
